--- a/app/src/main/res/layout/fragment_one.xml
+++ b/app/src/main/res/layout/fragment_one.xml
@@ -4,24 +4,23 @@
     android:layout_height="match_parent"
     tools:context="com.example.federicamarini.testtabs.OneFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/hello_one_fragment"
         android:textSize="40dp"
         android:textStyle="bold"
-        android:layout_centerInParent="true"
+        android:layout_marginTop="200dp"
+        android:layout_centerHorizontal="true"
         />
-    <Button
-        android:id="@+id/StartButton"
-        android:layout_width="300dp"
-        android:layout_height="60dp"
-        android:layout_gravity="center"
-        android:textSize="30sp"
-        android:text="@string/Start"
-        android:layout_marginBottom="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="@dimen/activity_horizontal_margin"
+
+    <TextView
+        android:id="@+id/messageText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="30dp"
+        android:textStyle="bold"
+        android:layout_centerInParent="true"
         />
 
 </RelativeLayout>
