--- a/app/src/main/res/layout/fragment_two.xml
+++ b/app/src/main/res/layout/fragment_two.xml
@@ -4,12 +4,21 @@
     android:layout_height="match_parent"
     tools:context="com.example.federicamarini.testtabs.TwoFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/hello_two_fragment"
         android:textSize="40dp"
+        android:textStyle="bold"
+        android:layout_marginTop="200dp"
+        android:layout_centerHorizontal="true"
+        />
+
+    <TextView
+        android:id="@+id/messageText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="30dp"
         android:textStyle="bold"
         android:layout_centerInParent="true"
         />
