--- a/app/src/main/res/layout/fragment_four.xml
+++ b/app/src/main/res/layout/fragment_four.xml
@@ -2,25 +2,35 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.federicamarini.testtabs.PingFragment">
+    tools:context="com.example.federicamarini.testtabs.WebFragment">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/ping_fragment"
+        android:text="@string/web_fragment"
         android:textSize="40dp"
         android:textStyle="bold"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="100dp"
         android:layout_centerHorizontal="true"
         />
-
     <TextView
         android:id="@+id/messageText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="30dp"
         android:textStyle="bold"
-        android:layout_centerInParent="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="150dp"
+        />
+    <WebView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/webview"
+        android:layout_width="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_height="420dp"
+        android:layout_marginTop="200dp"
+        android:layout_marginBottom="8dp"
         />
 
 </RelativeLayout>
