--- a/app/src/main/res/layout/fragment_three.xml
+++ b/app/src/main/res/layout/fragment_three.xml
@@ -2,12 +2,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.federicamarini.testtabs.PingFragment">
+    tools:context="com.example.federicamarini.testtabs.UploadFragment">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/ping_fragment"
+        android:text="@string/upload_fragment"
         android:textSize="40dp"
         android:textStyle="bold"
         android:layout_marginTop="200dp"
